discussion/kv_engine/161771/161771_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-48506: Introduce CheckpointBench.Expel

Change-Id: I14513f24699efb5a5885a74310a1f1b2e9fdc105

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2021-09-22 04:15:57.000000000
Message: 
Uploaded patch set 4: Patch Set 3 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-09-22 04:23:44.000000000
Message: 
Patch Set 4: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/34236/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/checkpoint_visitor.cc:35:5:
error: use of undeclared identifier "TRACE_EVENT0"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/34236/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/40219/ : FAILURE

Compile error at ..\kv_engine\logger\logger_benchmark.cc(27): error C3867: "benchmark::State::thread_index": non-standard syntax; use "&" to create a pointer to member ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/40219/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12677/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/benchmarks/vbucket_bench.cc:70:19: error: reference to non-static member function must be called; did you mean to call it with no arguments? [clang-diagnostic-error]
        if (state.thread_index == 0) {
                  ^
                              ()
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/benchmarks/vbucket_bench.cc:77:19: error: reference to non-static member function must be called; did you mean to call it with no arguments? [clang-diagnostic-error]
        if (state.thread_index == 0) {
                  ^
                              ()
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/benchmarks/vbucket_bench.cc:97:19: error: reference to non-static member function must be called; did you mean to call it with no arguments? [clang-diagnostic-error]
        if (state.thread_index == 0) {
                  ^
                              ()
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/benchmarks/vbucket_bench.cc:105:19: error: reference to non-static member function must be called; did you mean to call it with no arguments? [clang-diagnostic-error]
        if (state.thread_index == 0) {
                  ^
                              ()
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/benchmarks/vbucket_bench.cc:125:19: error: reference to non-static member function must be called; did you mean to call it with no arguments? [clang-diagnostic-error]
        if (state.thread_index == 0) {
                  ^
                              ()
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/benchmarks/vbucket_bench.cc:132:19: error: reference to non-static member function must be called; did you mean to call it with no arguments? [clang-diagnostic-error]
        if (state.thread_index == 0) {
                  ^
                              ()

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12677/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/benchmarks/vbucket_bench.cc:70:19:
error: reference to non-static member function must be called; did you mean to call it with no arguments? [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12677/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/2319/ : FAILURE

Compile error at [2021-09-22T04:19:12.151Z] ../kv_engine/logger/logger_benchmark.cc:27:19:
error: reference to non-static member function must be called; did you mean to call it with no arguments?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/2319/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/13437/ : FAILURE

Compile error at [2021-09-22T04:19:58.375Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master@2/kv_engine/engines/ep/benchmarks/hash_table_bench.cc:35:19:
error: reference to non-static member function must be called; did you mean to call it with no arguments?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/13437/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/15055/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/14548/ : FAILURE

Compile error at [2021-09-22T04:20:38.736Z] tlm/deps/googletest.exploded/include/gtest/gtest-printers.h:291:36:
error: no matching function for call to ?testing::internal::internal_stream_operator_without_lexical_name_lookup::StreamPrinter::PrintValue(const cb::mcbp::ClientOpcode&, std::nullptr_t)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/14548/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/22561/ : FAILURE

Compile error at [2021-09-22T04:21:48.918Z] ../kv_engine/logger/logger_benchmark.cc:27:19:
error: reference to non-static member function must be called; did you mean to call it with no arguments?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/22561/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/14295/ : FAILURE

Compile error at [2021-09-22T04:19:12.795Z] tlm/deps/googletest.exploded/include/gtest/gtest-printers.h:291:36:
error: no matching function for call to ?testing::internal::internal_stream_operator_without_lexical_name_lookup::StreamPrinter::PrintValue(const cb::mcbp::ClientOpcode&, std::nullptr_t)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/14295/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/2351/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/2351/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/11469/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
